--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <div id="app"></div>
     <div class="hero-unit">
       <h1>'Allo, 'Allo!</h1>
       <p>You now have</p>
